# calendly-clone

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/docs/feature-events/: plan.md
backend/docs/feature-events/tasks/: 02-create-scheduling-models.md  03-add-model-validation-tests.md  04-configure-django-admin.md  05-build-timezone-and-query-window-utilities.md  07-build-booking-creation-service.md  08-add-drf-serializers.md  10-add-api-integration-tests.md
backend/scheduling/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/scheduling/migrations/: 0001_initial.py  0002_alter_booking_invitee_timezone_alter_event_timezone.py
backend/scheduling/tests/: test_api.py  test_models.py  test_serializers.py  test_utils.py
docs/feature-events/tasks/: 01-add-backend-dependencies-and-app-shell.md  06-build-slot-generation-utility.md  09-add-public-api-views-and-routes.md  11-run-full-backend-verification.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/docs/feature-events/: plan.md
frontend/docs/feature-events/tasks/: 01-add-frontend-api-configuration.md  02-build-booking-api-client.md  03-add-date-and-timezone-utilities.md  04-create-route-and-booking-page-shell.md  (+7 more)
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: booking.js  config.js
frontend/src/pages/: BookingPage.jsx
frontend/src/utils/: dateTime.js
(+8 files in other folders)
